Security/CEL/gatekeeper/cel-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenynohostnetworkcel
spec:
  crd:
    spec:
      names:
        kind: K8sDenyNoHostNetworkCEL
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: K8sNativeValidation
          source:
            validations:
            - expression: "!has(object.spec.hostNetwork) || object.spec.hostNetwork != true"
              message: "HostNetwork usage is not allowed for pods"
