Security/CEL/gatekeeper/rego-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyNoHostNetwork
metadata:
  name: deny-hostnetwork-rego
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
